changed redstarter tags to inhabitent & updated metatags in json and style sheet

--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -1,9 +1,9 @@
 /*!
 Theme Name: Inhabitent Theme
 Theme URI: http://underscores.me/
-Author: RED Academy
+Author: Rob Monga
 Author URI: http://www.redacademy.com
-Description: A WordPress starter theme for RED Academy students.
+Description: A WordPress starter theme by RED Academy students.
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
