add business hours widget

--- a/themes/inhabitent/sass/_content.scss
+++ b/themes/inhabitent/sass/_content.scss
@@ -47,3 +47,13 @@
 .bypostauthor {
 	display: block;
 }
+
+// Footer
+
+.site-footer {
+	display:grid;
+	grid-template-columns: 150px, 150px, 150px;
+	grid-template-rows: 150px, 150px;
+	grid-gap:1rem;
+
+}
