--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -1,9 +1,9 @@
 /*!
-Theme Name: Inhabitent Theme
+Theme Name: RED Starter Theme
 Theme URI: http://underscores.me/
-Author: Rob Monga
+Author: RED Academy
 Author URI: http://www.redacademy.com
-Description: A WordPress starter theme by RED Academy students.
+Description: A WordPress starter theme for RED Academy students.
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
@@ -12,7 +12,7 @@ Tags:
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
 
-Inhabitent Theme is based on Underscores http://underscores.me/, (C) 2012-2015 Automattic, Inc.
+RED Starter Theme is based on Underscores http://underscores.me/, (C) 2012-2015 Automattic, Inc.
 Underscores is distributed under the terms of the GNU GPL v2 or later.
 
 Normalizing styles have been helped along thanks to the fine work of
@@ -647,6 +647,12 @@ a {
 
 .bypostauthor {
   display: block; }
+
+.site-footer {
+  display: grid;
+  grid-template-columns: 150px, 150px, 150px;
+  grid-template-rows: 150px, 150px;
+  grid-gap: 1rem; }
 
 /*--------------------------------------------------------------
 # Media
