--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -227,43 +227,43 @@ th {
 --------------------------------------------------------------*/
 @font-face {
   font-family: 'Merriweather Web';
-  src: url("../../fonts/merriweather-light-webfont.eot");
-  src: url("../../fonts/merriweather-light-webfont.eot?#iefix") format("embedded-opentype"), url("../../fonts/merriweather-light-webfont.woff2") format("woff2"), url("../../fonts/merriweather-light-webfont.woff") format("woff"), url("../../fonts/merriweather-light-webfont.ttf") format("truetype"), url("../../fonts/merriweather-light-webfont.svg#merriweatherlight") format("svg");
+  src: url("../../assets/fonts/merriweather-light-webfont.eot");
+  src: url("../../assets/fonts/merriweather-light-webfont.eot?#iefix") format("embedded-opentype"), url("../../assets/fonts/merriweather-light-webfont.woff2") format("woff2"), url("../../assets/fonts/merriweather-light-webfont.woff") format("woff"), url("../../assets/fonts/merriweather-light-webfont.ttf") format("truetype"), url("../../assets/fonts/merriweather-light-webfont.svg#merriweatherlight") format("svg");
   font-weight: normal;
   font-style: normal; }
 
 @font-face {
   font-family: 'Merriweather Web';
-  src: url("../../fonts/merriweather-lightitalic-webfont.eot");
-  src: url("../../fonts/merriweather-lightitalic-webfont.eot?#iefix") format("embedded-opentype"), url("../../fonts/merriweather-lightitalic-webfont.woff2") format("woff2"), url("../../fonts/merriweather-lightitalic-webfont.woff") format("woff"), url("../../fonts/merriweather-lightitalic-webfont.ttf") format("truetype"), url("../../fonts/merriweather-lightitalic-webfont.svg#merriweatherlight_italic") format("svg");
+  src: url("../../assets/fonts/merriweather-lightitalic-webfont.eot");
+  src: url("../../assets/fonts/merriweather-lightitalic-webfont.eot?#iefix") format("embedded-opentype"), url("../../assets/fonts/merriweather-lightitalic-webfont.woff2") format("woff2"), url("../../assets/fonts/merriweather-lightitalic-webfont.woff") format("woff"), url("../../assets/fonts/merriweather-lightitalic-webfont.ttf") format("truetype"), url("../../assets/fonts/merriweather-lightitalic-webfont.svg#merriweatherlight_italic") format("svg");
   font-weight: normal;
   font-style: italic; }
 
 @font-face {
   font-family: 'Merriweather Web';
-  src: url("../../fonts/merriweather-bold-webfont.eot");
-  src: url("../../fonts/merriweather-bold-webfont.eot?#iefix") format("embedded-opentype"), url("../../fonts/merriweather-bold-webfont.woff2") format("woff2"), url("../../fonts/merriweather-bold-webfont.woff") format("woff"), url("../../fonts/merriweather-bold-webfont.ttf") format("truetype"), url("../../fonts/merriweather-bold-webfont.svg#merriweatherbold") format("svg");
+  src: url("../../assets/fonts/merriweather-bold-webfont.eot");
+  src: url("../../assets/fonts/merriweather-bold-webfont.eot?#iefix") format("embedded-opentype"), url("../../assets/fonts/merriweather-bold-webfont.woff2") format("woff2"), url("../../assets/fonts/merriweather-bold-webfont.woff") format("woff"), url("../../assets/fonts/merriweather-bold-webfont.ttf") format("truetype"), url("../../assets/fonts/merriweather-bold-webfont.svg#merriweatherbold") format("svg");
   font-weight: bold;
   font-style: normal; }
 
 @font-face {
   font-family: 'Merriweather Web';
-  src: url("../../fonts/merriweather-bolditalic-webfont.eot");
-  src: url("../../fonts/merriweather-bolditalic-webfont.eot?#iefix") format("embedded-opentype"), url("../../fonts/merriweather-bolditalic-webfont.woff2") format("woff2"), url("../../fonts/merriweather-bolditalic-webfont.woff") format("woff"), url("../../fonts/merriweather-bolditalic-webfont.ttf") format("truetype"), url("../../fonts/merriweather-bolditalic-webfont.svg#merriweatherbold_italic") format("svg");
+  src: url("../../assets/fonts/merriweather-bolditalic-webfont.eot");
+  src: url("../../assets/fonts/merriweather-bolditalic-webfont.eot?#iefix") format("embedded-opentype"), url("../../assets/fonts/merriweather-bolditalic-webfont.woff2") format("woff2"), url("../../assets/fonts/merriweather-bolditalic-webfont.woff") format("woff"), url("../../assets/fonts/merriweather-bolditalic-webfont.ttf") format("truetype"), url("../../assets/fonts/merriweather-bolditalic-webfont.svg#merriweatherbold_italic") format("svg");
   font-weight: bold;
   font-style: italic; }
 
 @font-face {
   font-family: 'Novecento Sans Web';
-  src: url("../../fonts/novecentosanswide-normal-webfont.eot");
-  src: url("../../fonts/novecentosanswide-normal-webfont.eot?#iefix") format("embedded-opentype"), url("../../fonts/novecentosanswide-normal-webfont.woff2") format("woff2"), url("../../fonts/novecentosanswide-normal-webfont.woff") format("woff"), url("../../fonts/novecentosanswide-normal-webfont.ttf") format("truetype"), url("../../fonts/novecentosanswide-normal-webfont.svg#novecento_sans_widenormal") format("svg");
+  src: url("../../assets/fonts/novecentosanswide-normal-webfont.eot");
+  src: url("../../assets/fonts/novecentosanswide-normal-webfont.eot?#iefix") format("embedded-opentype"), url("../../assets/fonts/novecentosanswide-normal-webfont.woff2") format("woff2"), url("../../assets/fonts/novecentosanswide-normal-webfont.woff") format("woff"), url("../../assets/fonts/novecentosanswide-normal-webfont.ttf") format("truetype"), url("../../assets/fonts/novecentosanswide-normal-webfont.svg#novecento_sans_widenormal") format("svg");
   font-weight: normal;
   font-style: normal; }
 
 @font-face {
   font-family: 'Novecento Sans Web';
-  src: url("../../fonts/novecentosanswide-demibold-webfont.eot");
-  src: url("../../fonts/novecentosanswide-demibold-webfont.eot?#iefix") format("embedded-opentype"), url("../../fonts/novecentosanswide-demibold-webfont.woff2") format("woff2"), url("../../fonts/novecentosanswide-demibold-webfont.woff") format("woff"), url("../../fonts/novecentosanswide-demibold-webfont.ttf") format("truetype"), url("../../fonts/novecentosanswide-demibold-webfont.svg#novecento_sans_widedemibold") format("svg");
+  src: url("../../assets/fonts/novecentosanswide-demibold-webfont.eot");
+  src: url("../../assets/fonts/novecentosanswide-demibold-webfont.eot?#iefix") format("embedded-opentype"), url("../../assets/fonts/novecentosanswide-demibold-webfont.woff2") format("woff2"), url("../../assets/fonts/novecentosanswide-demibold-webfont.woff") format("woff"), url("../../assets/fonts/novecentosanswide-demibold-webfont.ttf") format("truetype"), url("../../assets/fonts/novecentosanswide-demibold-webfont.svg#novecento_sans_widedemibold") format("svg");
   font-weight: bold;
   font-style: normal; }
 
@@ -648,12 +648,6 @@ a {
 .bypostauthor {
   display: block; }
 
-.site-footer {
-  display: grid;
-  grid-template-columns: 150px, 150px, 150px;
-  grid-template-rows: 150px, 150px;
-  grid-gap: 1rem; }
-
 /*--------------------------------------------------------------
 # Media
 --------------------------------------------------------------*/
@@ -718,3 +712,53 @@ object {
 # Page Templates
 --------------------------------------------------------------*/
 /* Front page */
+.site-footer {
+  background-image: url("../../assets/images/dark-wood.png");
+  display: grid;
+  font-family: "Merriweather Web";
+  grid-template-columns: 250px, auto, 250px;
+  grid-template-rows: auto 150px;
+  grid-template-areas: "contact hours logo" "info info info";
+  justify-items: center; }
+  .site-footer .contact-info {
+    grid-area: contact; }
+  .site-footer .business-hours {
+    grid-area: hours; }
+  .site-footer .logo {
+    grid-area: logo;
+    color: white; }
+  .site-footer .site-info {
+    -ms-flex-item-align: end;
+        align-self: end;
+    grid-area: info;
+    text-align: center; }
+
+.site-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+.hero-image {
+  background-image: url("../../assets/images/home-hero.jpg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  height: 800px; }
+
+.hp-products {
+  height: 600px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row; }
+
+.hp-blog-posts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row; }
