sass variables and misc styling

--- a/themes/inhabitent/sass/_content.scss
+++ b/themes/inhabitent/sass/_content.scss
@@ -48,4 +48,11 @@
 	display: block;
 }
 
-// Footer
+/* -----------hero image stuff------------ */
+.hero-image-header {
+	height: 100vh;
+}
+
+.entry-title {
+    display: none;
+}
