--- a/themes/inhabitent/sass/_footer.scss
+++ b/themes/inhabitent/sass/_footer.scss
@@ -1,33 +1,34 @@
 
 .site-footer {
 	background-image: url("../../assets/images/dark-wood.png");
-	display:grid;
-	font-family: "Merriweather Web";
-	grid-template-columns: 250px, auto, 250px;
-	grid-template-rows: auto 150px;
-	grid-template-areas: "contact hours logo"
-						"info info info";
-	justify-items: center;
-	
-		.contact-info {
-		grid-area: contact;
-	}
-
-	.business-hours {
-		grid-area: hours;
-	}
-	
-	.logo {
-		grid-area: logo;
-		color: white;
-	}
-
-	.site-info {
-		align-self: end;
-		grid-area: info;
-		text-align: center;
+	.container {
+		display:grid;
+		grid-template-columns: 250px, auto, 250px;
+		grid-template-rows: auto 150px;
+		grid-template-areas: "contact hours logo"
+							"info info info";
+		justify-items: center;
 		
+			.contact-info {
+			grid-area: contact;
+		}
 
+		.business-hours {
+			grid-area: hours;
+		}
+		
+		.logo {
+			grid-area: logo;
+			color: white;
+		}
+
+		.site-info {
+			align-self: end;
+			grid-area: info;
+			text-align: center;
+			
+
+		}
 	}
 }
 
