remove sidebar from about page. style fp shop stuff style fp hero image

--- a/themes/inhabitent/sass/_content.scss
+++ b/themes/inhabitent/sass/_content.scss
@@ -56,3 +56,14 @@
 .entry-title {
     display: none;
 }
+
+// PRODUCT ITEM STYLING
+
+
+.type-product {
+	border:$solid__border;
+
+}
+
+// ARCHIVE PAGE STYLING 
+
