--- a/themes/inhabitent/sass/_mixins.scss
+++ b/themes/inhabitent/sass/_mixins.scss
@@ -10,3 +10,11 @@
 	margin-left: auto;
 	margin-right: auto;
 }
+
+
+@mixin green-button {
+	background:$green__brand;
+	color:#fff;
+	padding:10px;
+	// font-family: 
+}
