--- a/themes/inhabitent/sass/_typography.scss
+++ b/themes/inhabitent/sass/_typography.scss
@@ -7,8 +7,6 @@ button,
 input,
 select,
 textarea {
-	color: $color__text-main;
-	font-family: $font__main;
 	@include font-size(1);
 	line-height: $font__line-height-body;
 }
@@ -19,6 +17,12 @@ h1, h2, h3, h4, h5, h6 {
 	clear: both;
 	font-family: 'Novecento Sans Web';
 	text-transform: uppercase;
+}
+h6 {
+	clear: both;
+	font-family: 'Novecento Sans Web';
+	text-transform: uppercase;
+	color: $orange__brand;
 }
 
 /* Copy */
