--- a/themes/inhabitent/sass/_variables.scss
+++ b/themes/inhabitent/sass/_variables.scss
@@ -5,7 +5,6 @@ $base__space-unit: 1.5rem;
 // Colors
 
 $color__background-body: #fff;
-$color__text-main: #404040;
 
 $color__background-screen: #f1f1f1;
 $color__text-screen: #21759b;
@@ -28,7 +27,7 @@ $greymed__brand:#808080;
 
 // Typography
 
-$font__main: sans-serif;
+$font__heading: 2.5rem;
 $font__code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 $font__pre: "Courier 10 Pitch", Courier, monospace;
 $font__line-height-body: 1.5;
