--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -275,8 +275,6 @@ button,
 input,
 select,
 textarea {
-  color: #404040;
-  font-family: sans-serif;
   font-size: 16px;
   font-size: 1rem;
   line-height: 1.5; }
@@ -286,6 +284,12 @@ h1, h2, h3, h4, h5, h6 {
   clear: both;
   font-family: 'Novecento Sans Web';
   text-transform: uppercase; }
+
+h6 {
+  clear: both;
+  font-family: 'Novecento Sans Web';
+  text-transform: uppercase;
+  color: #d99054; }
 
 /* Copy */
 p {
@@ -676,6 +680,9 @@ a {
 .entry-title {
   display: none; }
 
+.type-product {
+  border: 1px, solid, #e1e1e1; }
+
 /*--------------------------------------------------------------
 # Media
 --------------------------------------------------------------*/
@@ -739,7 +746,19 @@ object {
 /*--------------------------------------------------------------
 # Page Templates
 --------------------------------------------------------------*/
-/* Front page */
+/* Pages with Sidebars*/
+.site-content {
+  display: grid;
+  grid-template-columns: 70vw 30vw;
+  grid-template-rows: 100vw;
+  grid-template-areas: "xontent sidebar"; }
+
+#secondary {
+  grid-area: sidebar; }
+
+#primary {
+  grid-area: xontent; }
+
 .site-footer {
   background-image: url("../../assets/images/dark-wood.png"); }
   .site-footer .container {
@@ -747,19 +766,23 @@ object {
     grid-template-columns: 250px, auto, 250px;
     grid-template-rows: auto 150px;
     grid-template-areas: "contact hours logo" "info info info";
-    justify-items: center; }
+    justify-items: center;
+    padding-top: 3rem; }
     .site-footer .container .contact-info {
       grid-area: contact; }
     .site-footer .container .business-hours {
       grid-area: hours; }
     .site-footer .container .logo {
       grid-area: logo;
-      color: white; }
+      padding-top: 1rem; }
     .site-footer .container .site-info {
       -ms-flex-item-align: end;
           align-self: end;
       grid-area: info;
       text-align: center; }
+
+p.site-footer {
+  color: #fff; }
 
 .site-header {
   width: 100vw;
@@ -785,29 +808,67 @@ object {
   grid-area: navbar;
   justify-self: flex-end; }
 
+h1 h2 {
+  font-weight: 400;
+  color: #2f1339;
+  font: outline; }
+
 .site-emblem {
-  position: absolute; }
+  position: absolute;
+  top: 25%;
+  left: 40%; }
 
 .hp-products {
-  height: 600px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row; }
+  display: grid;
+  grid-template-rows: 100% 100%;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 1rem;
+  max-width: 100vw; }
+  .hp-products img {
+    height: 70px;
+    width: auto; }
+
+.shop-stuff-container {
+  text-align: center; }
+
+.hp-product-types {
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border: 1px, solid, #e1e1e1;
+  border-top: 1px, solid, #e1e1e1;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; }
+
+.hp-button {
+  background: #248A83;
+  color: #fff;
+  padding: 10px; }
 
 .hp-blog-posts {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: none;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row; }
 
-.about-body {
+.hp-adventures {
+  display: none;
+  grid-template-areas: "heading heading heading" " story story" "story story story";
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr; }
+  .hp-adventures h2 {
+    grid-area: heading; }
+  .hp-adventures #go-to-post {
+    grid-area: story; }
+
+.hero-image-header {
+  width: 100vw;
+  display: block; }
+
+.a {
   display: block;
   margin-left: auto;
   margin-right: auto;
