--- a/themes/inhabitent/sass/_variables.scss
+++ b/themes/inhabitent/sass/_variables.scss
@@ -24,6 +24,7 @@ $orange__brand:#d99054;
 $yellow__brand:#f0e4d1;
 $greylight__brand:#a1a1a1;
 $greymed__brand:#808080;
+$white: #fff;
 
 // Typography
 
@@ -38,3 +39,4 @@ $font__line-height-pre: 1.6;
 
 $solid__border: 1px, solid, #e1e1e1;
 $dashed__border: 1px, dashed, #c8c8c8;
+$test: 5px, solid, red;
