change some grid to flex, validate some html, delete scss partials, organize scss

--- a/themes/inhabitent/sass/_content.scss
+++ b/themes/inhabitent/sass/_content.scss
@@ -33,7 +33,7 @@
 }
 
 /* Asides */
-
+//TODO: label this properly
 .blog .format-aside .entry-title,
 .archive .format-aside .entry-title {
 	display: none;
@@ -60,5 +60,3 @@
 	border:$solid__border;
 
 }
-
-// 
