--- a/themes/inhabitent/sass/_navigation.scss
+++ b/themes/inhabitent/sass/_navigation.scss
@@ -130,3 +130,17 @@ a {
 		width: 50%;
 	}
 }
+
+// MY BUTTONS 
+
+.hp-adventure-post {
+	display: grid;
+}
+
+.adv-button {
+	border: 1px solid #fff;
+	padding: 5px 10px;
+	color: #fff;
+	position: absolute;
+}
+
