--- a/themes/inhabitent/sass/_variables.scss
+++ b/themes/inhabitent/sass/_variables.scss
@@ -31,6 +31,8 @@ $white: #fff;
 $font__heading: 2.5rem;
 $font__code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 $font__pre: "Courier 10 Pitch", Courier, monospace;
+$font__nov:'Novecento Sans Web';
+$font__mer: 'Merriweather Web';
 $font__line-height-body: 1.5;
 $font__line-height-pre: 1.6;
 
